# vsc-sync-cli

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  todo-for-ai.md
.github/workflows/: docs.yml
behind-the-scenes/layer-precedence/: index.html
changelog/: index.html
docs/: changelog.md  for-developers.md  how-it-works.md  index.md  installation.md  template-config.md  usage.md
docs/behind-the-scenes/: layer-precedence.md
docs/for-developers/: architecture.md  docs-hosting.md
docs/scripts/: gen_api_pages.py
docs/tutorials/: quick-start.md
for-developers/: index.html
for-developers/architecture/: index.html
for-developers/docs-hosting/: index.html
how-it-works/: index.html
installation/: index.html
scripts/: gen_api_pages.py
search/: search_index.json
src/vsc_sync/: __init__.py  __main__.py  cli.py  config.py  exceptions.py  models.py  utils.py
src/vsc_sync/commands/: __init__.py  apply_cmd.py  edit_cmd.py  init_cmd.py  pull_cmd.py  setup_project_cmd.py  status_cmd.py
src/vsc_sync/core/: __init__.py  app_manager.py  config_manager.py  file_ops.py  git_ops.py
template-config/: index.html
tests/: __init__.py  conftest.py  test_cli.py  test_status_integration_simple.py
tests/commands/: test_apply_cmd.py  test_apply_tasks.py  test_edit_cmd.py  test_init_cmd.py  test_keybindings_sort.py  test_keybindings_sort_prd.py  test_pull_cmd.py  test_settings_sort.py  test_status_cmd.py
tests/core/: test_config_manager.py
tutorials/quick-start/: index.html
usage/: index.html
